--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,20 @@
 body {
+  display: flex;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+h1 {
+  text-align: center;
+}
+
+canvas {
+  margin-left: 20%;
+  align-items: center;
+  align-content: center;
+}
+
+p {
+  text-align: center;
 }
